--- a/Project/second.html
+++ b/Project/second.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Welcome to coding</h1>
+
+    <!-- inventory dashboard development -->
+    <!-- roadmap -->
+        <!-- 1. write the backend endpoints -->
+        <!-- 2. setup the dashboard container -->
+        <!-- 3. add the stylings -->
+        <!-- 4. fix the bugs -->
 </body>
 </html>
