two files modified

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>staff management</title>
 </head>
 <body>
-    <!-- staff management
-payroll management
-leave management
- -->
+   <ul>
+    <li>mad</li>
+    <li>mad</li>
+    <li>mad</li>
+    <li>mad</li>
+    <li>mad</li>
+   </ul>
     
 </body>
 </html>
