--- a/second.html
+++ b/second.html
@@ -7,8 +7,13 @@
     <title>second . html</title>
 </head>
 <body>
-    <!-- vinali 
-    samarasinghe
- -->
+   <ul>
+    <li>itp</li>
+    <li>itp</li>
+    <li>itp</li>
+    <li>itp</li>
+    <li>itp</li>
+   
+   </ul>
 </body>
 </html>
