two files modified

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <title>service management</title>
 </head>
 <body>
-    <!-- service details
-    service records
- -->
+    <ul>
+        <li>mad</li>
+        <li>mad</li>
+        <li>mad</li>
+        <li>mad</li>
+        <li>mad</li>
+        
+    </ul>
+    
+ 
 </body>
 </html>
