--- a/second.html
+++ b/second.html
@@ -7,7 +7,14 @@
     <title>second</title>
 </head>
 <body>
-    <!-- MAD 
-    -->
+    <ul>
+        <li>itp</li>
+        <li>itp</li>
+        <li>itp</li>
+        <li>itp</li>
+        <li>itp</li>
+        
+    </ul>
+    
 </body>
 </html>
